work on natural intelligence

--- a/main.bib
+++ b/main.bib
@@ -229,4 +229,295 @@ journal = {Bonn, Germany: German National Research Center for Information Techno
 
  @inbook{Lukoševičius_2012, address={Berlin, Heidelberg}, series={Lecture Notes in Computer Science}, title={A Practical Guide to Applying Echo State Networks}, volume={7700}, ISBN={978-3-642-35288-1}, url={http://link.springer.com/10.1007/978-3-642-35289-8_36}, DOI={10.1007/978-3-642-35289-8_36}, booktitle={Neural Networks: Tricks of the Trade}, publisher={Springer Berlin Heidelberg}, author={Lukoševičius, Mantas}, editor={Montavon, Grégoire and Orr, Geneviève B. and Müller, Klaus-Robert}, year={2012}, pages={659–686}, collection={Lecture Notes in Computer Science}, language={en} }
 
+@article{Abbott1999LapicquesIO,
+  title={Lapicque’s introduction of the integrate-and-fire model neuron (1907)},
+  author={L. F. Abbott},
+  journal={Brain Research Bulletin},
+  year={1999},
+  volume={50},
+  pages={303-304}
+}
 
+ @article{Izhikevich_2003, title={Simple model of spiking neurons}, volume={14}, ISSN={1045-9227}, DOI={10.1109/TNN.2003.820440}, number={6}, journal={IEEE Transactions on Neural Networks}, author={Izhikevich, E.M.}, year={2003}, month={Nov}, pages={1569–1572}, language={en} }
+
+ @article{Brette_Gerstner_2005, title={Adaptive Exponential Integrate-and-Fire Model as an Effective Description of Neuronal Activity}, volume={94}, ISSN={0022-3077, 1522-1598}, DOI={10.1152/jn.00686.2005}, abstractNote={We introduce a two-dimensional integrate-and-fire model that combines an exponential spike mechanism with an adaptation equation, based on recent theoretical findings. We describe a systematic method to estimate its parameters with simple electrophysiological protocols (current-clamp injection of pulses and ramps) and apply it to a detailed conductance-based model of a regular spiking neuron. Our simple model predicts correctly the timing of 96% of the spikes (±2 ms) of the detailed model in response to injection of noisy synaptic conductances. The model is especially reliable in high-conductance states, typical of cortical activity in vivo, in which intrinsic conductances were found to have a reduced role in shaping spike trains. These results are promising because this simple model has enough expressive power to reproduce qualitatively several electrophysiological classes described in vitro.}, number={5}, journal={Journal of Neurophysiology}, author={Brette, Romain and Gerstner, Wulfram}, year={2005}, month={Nov}, pages={3637–3642}, language={en} }
+
+@article{Paugam_Moisy,
+      title = {Spiking Neuron Networks A survey},
+      author = {Paugam-Moisy, Hélène},
+      publisher = {IDIAP},
+      year = {2006},
+      url = {http://infoscience.epfl.ch/record/83371},
+}
+
+ @article{Bi_Poo_2001, title={Synaptic Modification by Correlated Activity: Hebb’s Postulate Revisited}, volume={24}, ISSN={0147-006X, 1545-4126}, DOI={10.1146/annurev.neuro.24.1.139}, number={1}, journal={Annual Review of Neuroscience}, author={Bi, Guo-qiang and Poo, Mu-ming}, year={2001}, month={Mar}, pages={139–166}, language={en} }
+
+@article{KHERADPISHEH201856,
+title = {STDP-based spiking deep convolutional neural networks for object recognition},
+journal = {Neural Networks},
+volume = {99},
+pages = {56-67},
+year = {2018},
+issn = {0893-6080},
+doi = {https://doi.org/10.1016/j.neunet.2017.12.005},
+url = {https://www.sciencedirect.com/science/article/pii/S0893608017302903},
+author = {Saeed Reza Kheradpisheh and Mohammad Ganjtabesh and Simon J. Thorpe and Timothée Masquelier},
+keywords = {Spiking neural network, STDP, Deep learning, Object recognition, Temporal coding},
+}
+
+ @article{von_der_Malsburg_Stadelmann_Grewe_2022, title={A Theory of Natural Intelligence}, url={http://arxiv.org/abs/2205.00002}, abstractNote={Introduction: In contrast to current AI technology, natural intelligence -- the kind of autonomous intelligence that is realized in the brains of animals and humans to attain in their natural environment goals defined by a repertoire of innate behavioral schemata -- is far superior in terms of learning speed, generalization capabilities, autonomy and creativity. How are these strengths, by what means are ideas and imagination produced in natural neural networks? Methods: Reviewing the literature, we put forward the argument that both our natural environment and the brain are of low complexity, that is, require for their generation very little information and are consequently both highly structured. We further argue that the structures of brain and natural environment are closely related. Results: We propose that the structural regularity of the brain takes the form of net fragments (self-organized network patterns) and that these serve as the powerful inductive bias that enables the brain to learn quickly, generalize from few examples and bridge the gap between abstractly defined general goals and concrete situations. Conclusions: Our results have important bearings on open problems in artificial neural network research.}, note={arXiv:2205.00002 [cs, q-bio]}, number={arXiv:2205.00002}, publisher={arXiv}, author={von der Malsburg, Christoph and Stadelmann, Thilo and Grewe, Benjamin F.}, year={2022}, month={Apr} }
+
+@mastersthesis{lehmann,
+  author  = "Lehmann, Claude",
+  title   = "Leveraging Neuroscience for Deep Learning Based Object Recognition",
+  school  = "Zurich University of Applied Sciences",
+  year    = "2022"
+}
+
+@article{Dresp2020SevenPO,
+  title={Seven Properties of Self-Organization in the Human Brain},
+  author={Birgitta Dresp},
+  journal={Big Data Cogn. Comput.},
+  year={2020},
+  volume={4},
+  pages={10}
+}
+
+@book{kelso1995dynamic,
+  title={Dynamic patterns: The self-organization of brain and behavior},
+  author={Kelso, JA Scott},
+  year={1995},
+  publisher={MIT press}
+}
+
+@Article{hbcrd,
+author={McPherson, John D.
+and Marra, Marco
+and Hillier, LaDeana
+and Waterston, Robert H.
+and Chinwalla, Asif
+and Wallis, John
+and Sekhon, Mandeep
+and Wylie, Kristine
+and Mardis, Elaine R.
+and Wilson, Richard K.
+and Fulton, Robert
+and Kucaba, Tamara A.
+and Wagner-McPherson, Caryn
+and Barbazuk, William B.
+and Gregory, Simon G.
+and Humphray, Sean J.
+and French, Lisa
+and Evans, Richard S.
+and Bethel, Graeme
+and Whittaker, Adam
+and Holden, Jane L.
+and McCann, Owen T.
+and Dunham, Andrew
+and Soderlund, Carol
+and Scott, Carol E.
+and Bentley, David R.
+and Schuler, Gregory
+and Chen, Hsiu-Chuan
+and Jang, Wonhee
+and Green, Eric D.
+and Idol, Jacquelyn R.
+and Maduro, Valerie V. Braden
+and Montgomery, Kate T.
+and Lee, Eunice
+and Miller, Ashley
+and Emerling, Suzanne
+and Kucherlapati, Raju
+and Gibbs, Richard
+and Scherer, Steve
+and Gorrell, J. Harley
+and Sodergren, Erica
+and Clerc-Blankenburg, Kerstin
+and Tabor, Paul
+and Naylor, Susan
+and Garcia, Dawn
+and de Jong, Pieter J.
+and Catanese, Joseph J.
+and Nowak, Norma
+and Osoegawa, Kazutoyo
+and Qin, Shizhen
+and Rowen, Lee
+and Madan, Anuradha
+and Dors, Monica
+and Hood, Leroy
+and Trask, Barbara
+and Friedman, Cynthia
+and Massa, Hillary
+and Cheung, Vivian G.
+and Kirsch, Ilan R.
+and Reid, Thomas
+and Yonescu, Raluca
+and Weissenbach, Jean
+and Bruls, Thomas
+and Heilig, Roland
+and Branscomb, Elbert
+and Olsen, Anne
+and Doggett, Norman
+and Cheng, Jan-Fang
+and Hawkins, Trevor
+and Myers, Richard M.
+and Shang, Jin
+and Ramirez, Lucia
+and Schmutz, Jeremy
+and Velasquez, Olivia
+and Dixon, Kami
+and Stone, Nancy E.
+and Cox, David R.
+and Haussler, David
+and Kent, W. James
+and Furey, Terrence
+and Rogic, Sanja
+and Kennedy, Scot
+and Jones, Steven
+and Rosenthal, Andre
+and Wen, Gaiping
+and Schilhabel, Markus
+and Gloeckner, Gernot
+and Nyakatura, Gerald
+and Siebert, Reiner
+and Schlegelberger, Brigitte
+and Korenberg, Julie
+and Chen, Xiao-Ning
+and Fujiyama, Asao
+and Hattori, Masahira
+and Toyoda, Atsushi
+and Yada, Tetsushi
+and Park, Hong-Seok
+and Sakaki, Yoshiyuki
+and Shimizu, Nobuyoshi
+and Asakawa, Shuichi
+and Kawasaki, Kazuhiko
+and Sasaki, Takashi
+and Shintani, Ai
+and Shimizu, Atsushi
+and Shibuya, Kazunori
+and Kudoh, Jun
+and Minoshima, Shinsei
+and Ramser, Juliane
+and Seranski, Peter
+and Hoff, Celine
+and Poustka, Annemarie
+and Reinhardt, Richard
+and Lehrach, Hans},
+title={A physical map of the human genome},
+journal={Nature},
+year={2001},
+month={Feb},
+day={01},
+volume={409},
+number={6822},
+pages={934-941},
+issn={1476-4687},
+doi={10.1038/35057157},
+url={https://doi.org/10.1038/35057157}
+}
+
+ @article{Kolmogorov_1998, title={On tables of random numbers}, volume={207}, ISSN={03043975}, DOI={10.1016/S0304-3975(98)00075-9}, number={2}, journal={Theoretical Computer Science}, author={Kolmogorov, A.N.}, year={1998}, month={Nov}, pages={387–395}, language={en} }
+
+ @article{Willshaw_VonDerMalsburg_1976, title={How patterned neural connections can be set up by self-organization}, volume={194}, ISSN={0080-4649, 2053-9193}, DOI={10.1098/rspb.1976.0087}, abstractNote={An important problem in biology is to explain how patterned neural connections are set up during ontogenesis. Topographically ordered mappings, found widely in nervous systems, are those in which neighbouring elements in one sheet of cells project to neighbouring elements in a second sheet. Exploiting this neighbourhood property leads to a new theory for the establishment of topographical mappings, in which the distance between two cells is expressed in terms of their similarity with respect to certain physical properties assigned to them. This topographical code can be realized in a model employing either synchronization of nervous activity or exchange of specific molecules between neighbouring cells. By means of modifiable synapses the code is used to set up a topographical mapping between two sheets with the same internal structure. We have investigated the neural activity version. Without needing to make any elaborate assumptions about its structure or about the operations its elements are to carry out we have shown that the mappings are set up in a system-to-system rather than a cell-to-cell fashion. The pattern of connections develops in a step-by-step and orderly fashion, the orientation of the mappings being laid down in the earliest stages of development.}, number={1117}, journal={Proceedings of the Royal Society of London. Series B. Biological Sciences}, author={Willshaw, D. J. and Von Der Malsburg, Christoph}, year={1976}, month={Nov}, pages={431–445}, language={en} }
+
+ @article{Willshaw_VonDerMalsburg_1979, title={A marker induction mechanism for the establishment of ordered neural mappings: its application to the retinotectal problem}, volume={287}, ISSN={0080-4622, 2054-0280}, DOI={10.1098/rstb.1979.0056}, abstractNote={This paper examines the idea that ordered patterns of nerve connections are set up by means of markers carried by the individual cells. The case of the ordered retinotectal projection in amphibia and fishes is discussed in great detail. It is suggested that retinotectal mappings are the result of two mechanisms acting in concert. One mechanism induces a set of retinal markers into the tectum. By this means, an initially haphazard pattern of synapses is transformed into a continuous or piece-wise continuous projection. The other mechanism places the individual pieces of the map in the correct orientation. The machinery necessary for this inductive scheme has been expressed in terms of a set of differential equations, which have been solved numerically for a number of cases. Straightforward assumptions are made as to how markers are distributed in the retina; how they are induced into the tectum; and how the induced markers bring about alterations in the pattern of synaptic contacts. A detailed physiological interpretation of the model is given. The inductive mechanism has been formulated at the level of the individual synaptic interactions. Therefore, it is possible to specify, in a given situation, not only the nature of the end state of the mapping but also how the mapping develops over time. The role of the modes of growth of retina and tectum in shaping the developing projection becomes clear. Since, on this model, the tectum is initially devoid of markers, there is an important difference between the development and the regeneration of ordered mappings. In the development of duplicate maps from various types of compound-eyes, it is suggested that the tectum, rather than the retina, contains an abnormal distribution of markers. An important parameter in these experiments, and also in the regeneration experiments where part-duplication has been found, is the range of interaction amongst the retinal cells. It is suggested that the results of many of the regeneration experiments (including apparently contradictory ones) are manifestations of a conflict between the two alternative ways of specifying the orientation of the map: through the information carried by the markers previously induced into the tectum and through the orientation mechanism itself.}, number={1021}, journal={Philosophical Transactions of the Royal Society of London. B, Biological Sciences}, author={Willshaw, D. J. and Von Der Malsburg, Christoph}, year={1979}, month={Nov}, pages={203–243}, language={en} }
+
+@article{Malsburg_1987,
+	doi = {10.1209/0295-5075/3/11/015},
+	url = {https://doi.org/10.1209/0295-5075/3/11/015},
+	year = 1987,
+	month = {jun},
+	publisher = {{IOP} Publishing},
+	volume = {3},
+	number = {11},
+	pages = {1243--1249},
+	author = {C. von der Malsburg and E Bienenstock},
+	title = {A Neural Network for the Retrieval of Superimposed Connection Patterns},
+	journal = {Europhysics Letters ({EPL})},
+	abstract = {The principle of associative memory is extended to a system with dynamical links capable of retrieval of superimposed connection patterns. The system consists of formalized neurons. Its dynamics is described by two separate Hamiltonians, one for spins and one for links. The spin part is treated in analogy to the Ising system on a 2D grid. Several such network patterns, related by permutations of neurons, are superimposed. Energy minima correspond to the activation of one connection pattern and the deactivation of all others. One important application of this system is invariant pattern recognition.}
+}
+
+ @article{vonderMalsburg_2018, title={Concerning the Neuronal Code}, volume={19}, DOI={10.17791/JCS.2018.19.4.511}, number={4}, journal={Journal of Cognitive Science}, author={C. von der Malsburg}, year={2018}, month={Dec}, pages={511–550} }
+
+@article{freeman1990representations,
+  title={Representations: Who needs them?},
+  author={Freeman III, Walter J and Skarda, Christine A},
+  year={1990}
+}
+
+ @article{Fernandes_vonderMalsburg_2015, title={Self-Organization of Control Circuits for Invariant Fiber Projections}, volume={27}, ISSN={0899-7667, 1530-888X}, DOI={10.1162/NECO_a_00725}, abstractNote={Assuming that patterns in memory are represented as two-dimensional arrays of local features, just as they are in primary visual cortices, pattern recognition can take the form of elastic graph matching (Lades et al., 1993 ). Neural implementation of this may be based on preorganized fiber projections that can be activated rapidly with the help of control units (Wolfrum, Wolff, Lücke, & von der Malsburg, 2008 ). Each control unit governs a set of projection fibers that form part of a coherent mapping. We describe a mathematical model for the ontogenesis of the underlying connectivity based on a principle of network self-organization as described by the Häussler system (Häussler & von der Malsburg, 1983 ), modified to be sensitive to pattern similarity and to support formation of multiple mappings, each under the command of a control unit. The process takes the form of a soft-winner-take-all, where units compete for the representation of maps. We show simulations for invariant point-to-point and feature-to-feature mappings.}, number={5}, journal={Neural Computation}, author={Fernandes, Tomas and von der Malsburg, Christoph}, year={2015}, month={May}, pages={1005–1032}, language={en} }
+
+ @book{Arathorn_2002, address={Stanford, Calif}, title={Map-seeking circuits in visual cognition: a computational mechanism for biological and machine vision}, ISBN={978-0-8047-4277-1}, callNumber={QP383.15 .A736 2002}, publisher={Stanford University Press}, author={Arathorn, D. W.}, year={2002} }
+
+@Article{Olshausen1995,
+author={Olshausen, Bruno A.
+and Anderson, Charles H.
+and Van Essen, David C.},
+title={A multiscale dynamic routing circuit for forming size- and position-invariant object representations},
+journal={Journal of Computational Neuroscience},
+year={1995},
+month={Mar},
+day={01},
+volume={2},
+number={1},
+pages={45-62},
+abstract={We describe a neural model for forming size- and position-invariant representations of visual objects. The model is based on a previously proposed dynamic routing circuit that remaps selected portions of an input array into an object-centered reference frame. Here, we show how a multiscale representation may be incorporated at the input stage of the model, and we describe the control architecture and dynamics for a hierarchical, multistage routing circuit. Specific neurobiological substrates and mechanisms for the model are proposed, and a number of testable predictions are described.},
+issn={1573-6873},
+doi={10.1007/BF00962707},
+url={https://doi.org/10.1007/BF00962707}
+}
+
+@article{dorigo1997ant,
+  title={Ant colony system: a cooperative learning approach to the traveling salesman problem},
+  author={Dorigo, Marco and Gambardella, Luca Maria},
+  journal={IEEE Transactions on evolutionary computation},
+  volume={1},
+  number={1},
+  pages={53--66},
+  year={1997},
+  publisher={IEEE}
+}
+
+ @book{Hamann_2018, address={New York, NY}, title={Swarm robotics: a formal approach}, ISBN={978-3-319-74526-8}, publisher={Springer Science+Business Media}, author={Hamann, Heiko}, year={2018} }
+
+ @article{Rubenstein_Cornejo_Nagpal_2014, title={Programmable self-assembly in a thousand-robot swarm}, volume={345}, ISSN={0036-8075, 1095-9203}, DOI={10.1126/science.1254295}, number={6198}, journal={Science}, author={Rubenstein, Michael and Cornejo, Alejandro and Nagpal, Radhika}, year={2014}, month={Aug}, pages={795–799}, language={en} }
+
+@inproceedings{Wulff1992LearningCA,
+  title={Learning Cellular Automation Dynamics with Neural Networks},
+  author={N. H. Wulff and John A. Hertz},
+  booktitle={NIPS},
+  year={1992}
+}
+
+ @inbook{Byla_Pang_2020, address={Cham}, series={Advances in Intelligent Systems and Computing}, title={DeepSwarm: Optimising Convolutional Neural Networks Using Swarm Intelligence}, volume={1043}, ISBN={978-3-030-29932-3}, url={http://link.springer.com/10.1007/978-3-030-29933-0_10}, DOI={10.1007/978-3-030-29933-0_10}, booktitle={Advances in Computational Intelligence Systems}, publisher={Springer International Publishing}, author={Byla, Edvinas and Pang, Wei}, editor={Ju, Zhaojie and Yang, Longzhi and Yang, Chenguang and Gegov, Alexander and Zhou, Dalin}, year={2020}, pages={119–130}, collection={Advances in Intelligent Systems and Computing}, language={en} }
+
+@Article{Wolfram1984,
+author={Wolfram, Stephen},
+title={Cellular automata as models of complexity},
+journal={Nature},
+year={1984},
+month={Oct},
+day={01},
+volume={311},
+number={5985},
+pages={419-424},
+abstract={Natural systems from snowflakes to mollusc shells show a great diversity of complex patterns. The origins of such complexity can be investigated through mathematical models termed `cellular automata'. Cellular automata consist of many identical components, each simple., but together capable of complex behaviour. They are analysed both as discrete dynamical systems, and as information-processing systems. Here some of their universal features are discussed, and some general principles are suggested.},
+issn={1476-4687},
+doi={10.1038/311419a0},
+url={https://doi.org/10.1038/311419a0}
+}
+
+@article{VICHNIAC198496,
+title = {Simulating physics with cellular automata},
+journal = {Physica D: Nonlinear Phenomena},
+volume = {10},
+number = {1},
+pages = {96-116},
+year = {1984},
+issn = {0167-2789},
+doi = {https://doi.org/10.1016/0167-2789(84)90253-7},
+url = {https://www.sciencedirect.com/science/article/pii/0167278984902537},
+author = {Gérard Y. Vichniac},
+abstract = {Cellular automata are dynamical systems where space, time, and variables are discrete. They are shown on two-dimensional examples to be capable of non-numerical simulations of physics. They are useful for faithful parallel processing of lattice models. At another level, they exhibit behaviours and illustrate concepts that are unmistakably physical, such as non-ergodicity and order parameters, frustration, relaxation to chaos through period doublings, a conspicuous arrow of time in reversible microscopic dynamics, causality and light-cone, and non-separability. In general, they constitute exactly computable models for complex phenomena and large-scale correlations that result from very simple short-range interactions. We study their space, time, and intrinsic symmetries and the corresponding conservation laws, with an emphasis on the conservation of information obeyed by reversible cellular automata.}
+}
