--- a/styles/phdbyphd.sty
+++ b/styles/phdbyphd.sty
@@ -167,7 +167,7 @@
 \edef\BackrefFootnoteTag{bhfn:\theBackrefHyperFootnoteCounter}
 
 \RequirePackage{marginnote}  % provides \marginnote ~ \marginpar
-\RequirePackage{marginfix}	 % fix \marginpar for overfull margins
+%\RequirePackage{marginfix}	 % fix \marginpar for overfull margins
 \RequirePackage{sidenotes}   % main package for sidenotes
 \RequirePackage{chngcntr}	 % provides \counterwithin and \counterwithout
 
