--- a/main.tex
+++ b/main.tex
@@ -31,10 +31,10 @@
 \titlehead{Master of Science in Engineering with Specialisation in Data Science}
 
 \subject{Master Thesis}
-\title[The Effect of Dynamically Built Lateral Connection in Deep Learning Systems]{
-    The Effect of Dynamically Built Lateral Connection in Deep Learning Systems
+\title[On Improving Pattern Recognition in Deep Learning Systems through Self-Organization]{
+    On Improving Pattern Recognition in Deep Learning Systems through Self-Organization
 }
-\subtitle{On Bridging the Gap between Neuroscience and Deep Learning}
+\subtitle{Incorporating Findings from Neuroscience about Brain Functionality into Modern Deep Learning Architectures}
 
 \author[Pascal Sager]{Pascal Sager}
 \date{\today}
@@ -107,6 +107,11 @@
 \chapter{Introduction}\chlbl{intro}
 \input{tex/intro}
 
+\chapter{Motivation}\chlbl{motivation}
+\input{tex/motivation}
+
+\chapter{Related Work}\chlbl{rel_work}
+\input{tex/related_work}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix
