--- a/main.tex
+++ b/main.tex
@@ -107,9 +107,11 @@
 \chapter{Introduction}\chlbl{intro}
 \input{tex/intro}
 
-\chapter{Motivation}\chlbl{motivation}
-\input{tex/motivation}
+\setchapterpreamble[u]{\margintoc}
+\chapter{Fundamentals}\chlbl{fundamentals}
+\input{tex/fundamentals}
 
+\setchapterpreamble[u]{\margintoc}
 \chapter{Related Work}\chlbl{rel_work}
 \input{tex/related_work}
 
