--- a/tex/fundamentals.tex
+++ b/tex/fundamentals.tex
@@ -1,13 +1,4 @@
-%% intro.tex
-
-
-
-
-Machine learning (ML) has become an indispensable part of our everyday lives.
-For example, we use it for machine translation, transport and logistics organization, product recommendations, fraud detection, self-driving cars, and much more.
-
-
-\section{Fundamentals}\seclbl{fundamentalsDL}
+%% fundamentals.tex
 
 TODO: Input Thilo -> mache den Bezug von diesem Teil auf die schlussendliche Arbeit viel deutlicher -> was wird wie gebraucht?
 
@@ -23,6 +14,7 @@ Deep Learning models use artificial neural networks to learn the mapping functio
 In the following, the fundamentals of Deep Learning is explained.
 Only those aspects that are relevant for the understanding of the rest of the thesis are discussed.
 
+\section{Artificial Neural Networks}\seclbl{ann}
 The idea for artificial neural networks (ANN) stems from biology and aims to capture the interaction of brain cells (neurons) with a mathematical model.
 A first model for a neuron was proposed by MuCulloch and Pitts in 1943 \sidecite{McCulloch_Pitts_1943}.
 Similar to how a"neuron of the human brain transmits electrical impulses through the nervous system, the artificial neuron of MuCulloch and Pitts receives multiple input signals and transforms them into a output signal.
@@ -430,9 +422,6 @@ They generalize better and faster than equivalent MLP.
 The main drawback of current systems is that cannot deal well with high-dimensional inputs such as images.
 
 
-\subsection{Organization of Thesis}\seclbl{org_thesis}
-The remainder of the thesis is organized as follows: TODO
-% Related work: Hedge Backpropagation: https://arxiv.org/abs/1711.03705
 
 
 
