--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -75,7 +75,7 @@ Neural Cellular Automata \sidecite{Wulff1992LearningCA} use neural networks to l
 %https://www.nature.com/articles/srep12866
 %https://sebastianrisi.com/self_assembling_ai/ + Video -> very good points at beginning + self organization (start at min. 30 also about self organizing networks)
 
-
+% Related work: Hedge Backpropagation: https://arxiv.org/abs/1711.03705
 
 
 % Summarize work from Claude -> only if relevant...
