--- a/main.bib
+++ b/main.bib
@@ -61,6 +61,14 @@
   urldate = {2022-08-19}
 }
 
+@online{axios_hinton,
+  author = {Axios Media Inc.},
+  title = {Artificial intelligence pioneer says we need to start over},
+  year = 2017,
+  url = {https://www.axios.com/2017/12/15/artificial-intelligence-pioneer-says-we-need-to-start-over-1513305524},
+  urldate = {2022-09-04}
+}
+
 @article{Kingma2015AdamAM,
   title={Adam: A Method for Stochastic Optimization},
   author={Diederik P. Kingma and Jimmy Ba},
@@ -521,3 +529,25 @@ url = {https://www.sciencedirect.com/science/article/pii/0167278984902537},
 author = {Gérard Y. Vichniac},
 abstract = {Cellular automata are dynamical systems where space, time, and variables are discrete. They are shown on two-dimensional examples to be capable of non-numerical simulations of physics. They are useful for faithful parallel processing of lattice models. At another level, they exhibit behaviours and illustrate concepts that are unmistakably physical, such as non-ergodicity and order parameters, frustration, relaxation to chaos through period doublings, a conspicuous arrow of time in reversible microscopic dynamics, causality and light-cone, and non-separability. In general, they constitute exactly computable models for complex phenomena and large-scale correlations that result from very simple short-range interactions. We study their space, time, and intrinsic symmetries and the corresponding conservation laws, with an emphasis on the conservation of information obeyed by reversible cellular automata.}
 }
+
+
+
+
+
+
+
+
+
+@article{science.1372754,
+author = {Siegrid Löwel  and Wolf Singer },
+title = {Selection of Intrinsic Horizontal Connections in the Visual Cortex by Correlated Neuronal Activity},
+journal = {Science},
+volume = {255},
+number = {5041},
+pages = {209-212},
+year = {1992},
+doi = {10.1126/science.1372754},
+URL = {https://www.science.org/doi/abs/10.1126/science.1372754},
+eprint = {https://www.science.org/doi/pdf/10.1126/science.1372754}
+}
+
